# codezoom

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/codezoom/: __init__.py  __main__.py  analysis.py  cli.py  detect.py  model.py  pipeline.py
src/codezoom/extractors/: base.py
src/codezoom/extractors/gradle/: __init__.py  gradle_deps.py  source_hierarchy.py  source_symbols.py
src/codezoom/extractors/java/: __init__.py  ast_symbols.py  gradle_deps.py  maven_deps.py  package_hierarchy.py
src/codezoom/extractors/python/: __init__.py  ast_symbols.py  module_hierarchy.py  package_deps.py
src/codezoom/extractors/rust/: __init__.py  _rustdoc.py  ast_symbols.py  cargo_deps.py  module_hierarchy.py
src/codezoom/renderer/: html.py  template.html
