[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codezoom"
version = "2.2.1.dev0"
description = "Multi-level code structure explorer — interactive drill-down HTML visualizations"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
authors = [
    { name = "Curtis Rueden" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
java = [
    "jgo>=2.0.0.dev0",
]
rust = [
    "tree-sitter>=0.24",
    "tree-sitter-rust>=0.24",
]

[dependency-groups]
dev = [
    "build",
    "ruff",
    "validate-pyproject[all]",
]

[tool.uv.sources]
jgo = { path = "../jgo", editable = true }

[project.scripts]
codezoom = "codezoom.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "/screenshots",
]
